fix(img-soal): clean some html tags from soal, fix(simulation): add api for get list mapel for simulation
